# discord-smp-link

./: Cargo.toml  docker-compose.local.yaml  docker-compose.production.yaml  flake.nix
src/: auth.rs  main.rs  polyfill.rs  states.rs  translation.rs
src/commands/: classes.rs  groups.rs  levels.rs  mod.rs
src/commands/helpers/: mod.rs  refresh.rs
src/events/: login.rs  mod.rs
src/server/: handler.rs
