[package]
name = "discord_smp_link"
version = "0.1.0"
description = "A link between a discord guild and a google account"
repository = "https://github.com/mrnossiom/discord-smp-link"
keywords = ["discord", "google", "oauth2"]
categories = ["authentication"]
license = "MIT"
edition = "2021"

[features]
cache = ["poise/cache"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
console-subscriber = "0.4"
diesel-async = { version = "0.5", features = ["mysql", "deadpool"] }
diesel_migrations = { version = "2", features = ["mysql"] }
dotenvy = "0.15"
fluent = "0.16"
fluent-syntax = "0.11"
futures = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["rustls-native-certs"] }
intl-memoizer = "0.5"
oauth2 = "5"
poise = "0.6"
rocket = { version = "0.5", features = ["tls"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
rustls = "0.23"
rustls-pemfile = "2"
thiserror = "2"
secrecy = "0.10"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
	"registry",
	"env-filter",
	"json",
] }
unic-langid = { version = "0.9", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
pin-project = "1"

[dependencies.diesel]
version = "2"
default-features = false
features = ["mysql"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls-native-roots"]

[lints]
[lints.rust]
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

missing_docs_in_private_items = "warn"
unwrap_used = "warn"

multiple_crate_versions = "allow"
redundant_pub_crate = "allow"
[lints.rustdoc]
broken_intra_doc_links = "warn"

[profile.release]
strip = true
opt-level = 3
lto = true

[profile.dev.build-override]
opt-level = 3
